--- a/Superstore-Sales-Analysis-main/requirements.txt
+++ b/Superstore-Sales-Analysis-main/requirements.txt
@@ -1,5 +1,3 @@
-pandas==2.2.3
-numpy==2.1.3
 scikit-learn==1.6.1
 xgboost==3.0.0
 joblib==1.5.0
@@ -8,3 +6,14 @@ pmdarima==2.0.4
 prophet==1.1.6
 matplotlib==3.10.3
 seaborn==0.13.2
+dash==2.14.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+pandas==2.2.3
+plotly==5.18.0
+prophet==1.1.5
+numpy==2.2.5
+gunicorn==21.2.0
+streamlit==1.45.1
+dash-bootstrap-components==1.5.0
+scikit-learn==1.4.1.post1 
